-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8, 6.9
-
None
-
491f8a633 (dev), 21fd8aa0b (6.10), a352a8330 (6.9), 18f5cb4fa (tqtc/lts-6.8)
The attached example triggers an assertion if a relative URL is used, or prints an error like
QQuickItem_QML_2(0x55dd81b01f40) ""
QQmlComponent: Component is not ready
QObject(0x0) "qrc:/test0:4 Type Info unavailable\nqrc:/test0:-1 No such file or directory\n"
if an absolute URL is used in the setData call in MySpecialItem::breakStuff.
With 6.5, this works.
| For Gerrit Dashboard: QTBUG-137115 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 653674,2 | QQmlPropertyValidator: Check inline components first | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 654191,2 | QQmlPropertyValidator: Check inline components first | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 654250,2 | QQmlPropertyValidator: Check inline components first | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 654318,3 | QQmlPropertyValidator: Check inline components first | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |