QQmlPropertyValidator: Check inline components first

As mentioned in the comment, we cannot rely on the type registry for
property caches of inline components. So, whatever we find there is
necessarily outdated. Check the compilation unit's inline components
first to avoid this situation.

Pick-to: 6.8
Fixes: QTBUG-137115
Change-Id: I708435823428fd9f1cdae4b5bffda36d51ab1982
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 491f8a633374e402fdfccee8e49e782f7a23816d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 21fd8aa0b6231954436f816d36f9b01002e9cddd)